# cenzopapa-sdk

./: .gitignore  requirements.txt  setup.cfg
cenzopapa/: __init__.py  decorators.py  mixins.py  resource_client.py  resources.py
src/cenzopapa/: __init__.py  mixins.py  resources.py
