[metadata]
name = cenzopapa-sdk
version = 1.0.0
author = Adrian Qwizi Ciolek
author_email = ciolek.adrian@protonmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Qwizi/cenzopapa-sdk
project_urls =
    Bug Tracker = https://github.com/Qwizi/cenzopapa-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src